[sonar] More fixes.